# hardware-info-fetcher

./: .gitignore  HardwareMon.py  HardwareMon.sh  README.md  hardware_info.py  hardware_info.sh  hardwaremon_gui.py  hwmon.ps1  pyproject.toml  requirements.txt  setup.py  sysdash.sh  test_hardwaremon.py
.github/workflows/: publish.yml  python-app.yml  release.yml
Python Script/: hardware_info.py
Windows Shell/: hardware-info.ps1
hardwaremon/: HardwareMon.py  hardwaremon.py  hardwaremon_gui.py
hardwaremonLINUX/: __init__.py
