[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hardwaremon"
version = "2.0.0"
description = "Hardware monitoring tool for CPU, RAM, and battery."
readme = "README.md"
authors = [{name="Louis Hinchliffe", email="your.email@example.com"}]
license = {file="LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "psutil",
    "requests",
]

[project.scripts]
hardwaremon = "hardwaremon.HardwareMon:main"  # if you have a main() function